--- a/src/config/config_adapter.yaml
+++ b/src/config/config_adapter.yaml
@@ -1,4 +1,6 @@
-output_dir: ./output
+output_dir: ./seggpt-foodseg103-adapter
+remove_unused_columns: false
+use_cpu: true
 per_device_train_batch_size: 8
 per_device_eval_batch_size: 8
 num_train_epochs: 5
