--- a/src/config/config_adapter.yaml
+++ b/src/config/config_adapter.yaml
@@ -1,10 +1,9 @@
 output_dir: ./seggpt-foodseg103-adapter
 remove_unused_columns: false
-use_cpu: true
 per_device_train_batch_size: 8
 per_device_eval_batch_size: 8
 num_train_epochs: 5
-report_to: wandb
+report_to: none
 push_to_hub: true
 mask_ratio: 0.75
 random_coloring: false
