--- a/src/config/config.yaml
+++ b/src/config/config.yaml
@@ -3,7 +3,7 @@ remove_unused_columns: false
 per_device_train_batch_size: 8
 per_device_eval_batch_size: 8
 num_train_epochs: 5
-report_to: none
+report_to: wandb
 push_to_hub: true
 mask_ratio: 0.75
 random_coloring: false
