--- a/src/config/config.yaml
+++ b/src/config/config.yaml
@@ -1,9 +1,10 @@
 output_dir: ./seggpt-foodseg103
 remove_unused_columns: false
-per_device_train_batch_size: 8
-per_device_eval_batch_size: 8
-num_train_epochs: 5
+per_device_train_batch_size: 2
+per_device_eval_batch_size: 2
+num_train_epochs: 1
 report_to: none
+use_cpu: true
 push_to_hub: true
 mask_ratio: 0.75
 random_coloring: false
