--- a/src/config/config.yaml
+++ b/src/config/config.yaml
@@ -8,5 +8,6 @@ push_to_hub: true
 eval_strategy: steps
 logging_steps: 1
 learning_rate: 0.0005
+lr_scheduler_type: constant
 mask_ratio: 0.75
 random_coloring: false
