--- a/src/config/config.yaml
+++ b/src/config/config.yaml
@@ -9,5 +9,8 @@ eval_strategy: steps
 logging_steps: 1
 learning_rate: 0.0005
 lr_scheduler_type: constant
+dataloader_num_workers: 4
+dataloader_persistent_workers: true
+dataloader_prefetch_factor: 1
 mask_ratio: 0.75
 random_coloring: false
