--- a/src/config/config.yaml
+++ b/src/config/config.yaml
@@ -2,15 +2,21 @@ output_dir: ./seggpt-foodseg103
 remove_unused_columns: false
 per_device_train_batch_size: 2
 per_device_eval_batch_size: 2
-num_train_epochs: 1
+num_train_epochs: 5
 report_to: wandb
 push_to_hub: true
 eval_strategy: steps
 logging_steps: 1
 learning_rate: 0.0005
 lr_scheduler_type: constant
-dataloader_num_workers: 4
+dataloader_num_workers: 3
 dataloader_persistent_workers: true
 dataloader_prefetch_factor: 1
+bf16: true
+gradient_accumulation_steps: 2
+save_total_limit: 8
+num_pairs_per_image: 5
+num_pairs_per_image_validation: 1
+eval_steps: 150
 mask_ratio: 0.75
-random_coloring: false
+random_coloring: true
